--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev":"node server.js",
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build":"npm i"
