--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "dev":"node server.js",
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build":"npm i"
+    "build":"npm run build"
   },
   "author": "",
   "license": "ISC",
