--- a/backend/.env
+++ b/backend/.env
@@ -8,3 +8,4 @@ CLOUDINARY_API_SECRET=
 GOOGLE_API_KEY=AIzaSyA52Np6f1_nVIR_vvv5AwYAbHJzSfQ20Nk
 MAILGUN_DOMIAN=https://api.mailgun.net/v3/sandboxd77af80482b34a54bbfa4022bef39913.mailgun.org
 MAILGUN_API_KEY=293d2a1fa7b4a2dffb5739e38b44a7be-07ec2ba2-d0c2f261
+BASE_URL=https://amrithamsrilankadd.onrender.com
