--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "proxy": "https://amrithamsrilankadd.onrender.com",
+  "proxy": "https://master--amirtham.netlify.app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
